[package]
name = "bdd"
version = "0.1.0"
authors = ["Thalia Archibald <thalia@archibald.dev>"]
edition = "2021"
rust-version = "1.82" # For std::slice::is_sorted
description = "A library for binary decision diagrams"
repository = "https://github.com/thaliaarchi/bdd-rust"
license = "MPL-2.0"
keywords = ["bdd", "robdd"]
categories = ["data-structures", "algorithms"]

[dependencies]
hashbrown = { version = "0.14.5", features = ["raw"] }
